--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mavon-editor": "^2.4.13",
     "vue": "^2.5.2",
     "vue-echarts": "^2.6.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
